Thu Nov 21 17:29:02 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/ImplRepo_Service/AsyncAccessManager.cpp:
          Fix for ensuring that externally killed servers can be restarted through
          the ImR service.

        * orbsvcs/ImplRepo_Service/AsyncListManager.h:
        * orbsvcs/ImplRepo_Service/AsyncListManager.cpp:
        * orbsvcs/ImplRepo_Service/LiveCheck.h:
        * orbsvcs/ImplRepo_Service/LiveCheck.cpp:
          Fix for a potential memory leak when a list of active servers includes some
          that are in some troubled state. Since the participants are all reference
          counted, it isn't a true leak, rather unbounded allocation of objects for
          which the refcount may never reach 0. Also added more debugging output.

Mon Nov 18 18:07:24 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/orbsvcs/PortableGroup/PG_Group_List_Store.h:
        * orbsvcs/orbsvcs/PortableGroup/PG_Group_List_Store.cpp:
        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group_Storable.h:
        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group_Storable.cpp:
          The file lock used in these classes is a process level lock.
          This change adds a thread mutex to insure that only one thread
          in the process holds the file lock.
          Submitted on behalf of Rich Seibel <seibelr@ociweb.com>

Mon Nov 11 09:43:02 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Prepare for next release

        * tao/Codeset/Codeset_Manager_i.cpp:
          Debug message change

Mon Nov 11 09:17:34 CET 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO version 2.2.3 released.

Fri Nov  8 17:05:35 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * interop-tests/CdrOutArg/orbix/README:
          Fix the Orbix version citation.

Fri Nov  8 15:33:29 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * interop-tests/CdrOutArg/orbix/README: